# seamless-compressed-textures

./: CMakeLists.txt  README.md
src/: MakefileEmscripten  compressed_image.cpp  compressed_image.h  image.cpp  image.h  image_io.cpp  line.cpp  line.h  lineareq.h  lineareq_eigen.cpp  main.cpp  mesh.cpp  mesh.h  mesh_io.cpp  metric.h  pyramid.cpp  pyramid.h  solver.cpp  solver.h  vec3.h
src/glm/: .appveyor.yml  CMakeLists.txt
src/glm/test/ext/: ext_scalar_relational.cpp
src/glm/test/gtx/: gtx_fast_trigonometry.cpp
